<resources>
    <string name="app_name">TFS Messenger</string>
    <string name="input_message_hint">Написать…</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_channels">Channels</string>
    <string name="title_people">People</string>
    <string name="title_profile">Profile</string>
    <string name="title_stream_new">Create stream</string>
    <string name="menu_search_title">Search…</string>
    <string name="tab_channels_subscribed">Subscribed</string>
    <string name="tab_channels_all">All streams</string>
    <string name="item_topic_count">%d mes</string>
    <string name="topic_name">Topic: #%s</string>
    <string name="profile_button_logout">Log out</string>
    <string name="profile_active">online</string>
    <string name="profile_idle">idle</string>
    <string name="profile_offline">offline</string>
    <string name="error_button_reload">Reload</string>
    <string name="default_error_title">Something went wrong</string>
    <string name="error_select_file">Please install a File Manager</string>
    <string name="title_select_file">Select a File to Upload</string>
    <string name="error_file_not_found">File Not Found</string>
    <string name="info_file_downloaded">File downloaded</string>
    <string name="error_connection_lost">Connection lost. Please check your Internet connection</string>
    <string name="stream_new_name_hint">Stream name</string>
    <string name="button_create_stream">Create</string>
    <string name="error_stream_exists">Stream already exists</string>
    <string name="error_http_429">Too many requests</string>
    <string name="error_http_400">Bad request</string>
    <string name="error_server_unavailable">Server unavailable</string>
    <string name="hint_topic">topic</string>
    <string name="default_topic_name">topic</string>
    <string name="action_add_reaction">Add reaction</string>
    <string name="action_edit_message">Edit message</string>
    <string name="action_copy_to_clipboard">Copy to clipboard</string>
    <string name="action_delete_message">Delete message</string>
    <string name="button_message_update">Update</string>
    <string name="template_to_clipboard">From: %s\nMessage: %s</string>
    <string name="message_from_me">Me</string>
</resources>