<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_add_reaction"
        style="@style/MessageActionStyle"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:text="@string/action_add_reaction" />

    <TextView
        android:id="@+id/tv_edit_message"
        style="@style/MessageActionStyle"
        android:text="@string/action_edit_message" />

    <TextView
        android:id="@+id/tv_copy_to_clipboard"
        style="@style/MessageActionStyle"
        android:text="@string/action_copy_to_clipboard" />

    <TextView
        android:id="@+id/tv_delete_message"
        style="@style/MessageActionStyle"
        android:layout_marginBottom="@dimen/fragment_vertical_margin"
        android:text="@string/action_delete_message" />

</LinearLayout>