<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_channels">

    <fragment
        android:id="@+id/navigation_channels"
        android:name="ru.nordbird.tfsmessenger.ui.channels.ChannelsFragment"
        android:label="@string/title_channels"
        tools:layout="@layout/fragment_channels" />

    <fragment
        android:id="@+id/navigation_people"
        android:name="ru.nordbird.tfsmessenger.ui.people.PeopleFragment"
        android:label="@string/title_people"
        tools:layout="@layout/fragment_people" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ru.nordbird.tfsmessenger.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>