<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.topic.EditMessageFragment">

    <include
        android:id="@+id/appbar"
        layout="@layout/appbar_layout" />

    <AutoCompleteTextView
        android:id="@+id/tv_message_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_horizontal_margin"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:layout_marginEnd="@dimen/fragment_horizontal_margin"
        android:background="@color/default_round_bg"
        android:completionThreshold="0"
        android:hint="@string/hint_topic"
        android:padding="16dp"
        android:textColor="@color/topic_text_color"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_message_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_horizontal_margin"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:layout_marginEnd="@dimen/fragment_horizontal_margin"
        android:autofillHints="Message"
        android:background="@color/default_round_bg"
        android:hint="@string/input_message_hint"
        android:inputType="textLongMessage|textMultiLine"
        android:padding="16dp"
        android:textColor="@color/topic_text_color"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_update"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_default"
        android:gravity="center"
        android:text="@string/button_message_update"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>